src/objects/sma__MATerritoryGeometry__c.object
<CustomObject>
    <fields>
        <fullName>sma__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Geometry__c</fullName>
        <label>Geometry</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Territory__c</fullName>
        <label>Territory</label>
        <referenceTo>sma__MATerritory__c</referenceTo>
        <relationshipLabel>Geometries</relationshipLabel>
        <relationshipName>Geometries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>MapAnything Territory Geometry</label>
    <listViews>
        <fullName>sma__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Geometry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Territory Geometries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>